feat(v3.0.0): full hardware stabilization, crypto integration, and signal filtering
Major release combining hardware fixes, memory safety, and security features.

Hardware & Stability:
- Fixed I2C pin mapping for ESP32-C3 SuperMini (SDA=7, SCL=8).
- Implemented Dynamic Allocation (`new`) for sensor object to fix boot-loop/Guru Meditation crashes.
- Added I2C bus recovery sequence (bit-banging) on boot to unlatch "zombie" sensors.

Signal Processing (DSP):
- Added Noise Gate (0.04G) to filter out electrical noise and prevent false positives at 1.8 ratio.
- Added Dropout Protection: ignores readings <0.2G (sensor disconnects) to prevent false spikes.

Security:
- Integrated ECDSA (NIST256p) payload signing.
- Moved Key Generation/Display to start of setup() to guarantee key retrieval even during hardware failure.

Documentation:
- Updated main firmware and test modules with formal technical comments.

--- a/iot-data-harvester/esp32_code/test/README
+++ b/iot-data-harvester/esp32_code/test/README
@@ -1,11 +1,33 @@
+# QuakeGuard - Diagnostic & Test Modules
 
-This directory is intended for PlatformIO Test Runner and project tests.
+## Overview
+This directory contains isolated firmware utilities designed for hardware verification and algorithm tuning of the **QuakeGuard** seismic node. These scripts operate independently of the main production firmware and are intended to troubleshoot physical connection issues or calibrate the detection logic without network dependencies.
 
-Unit Testing is a software testing method by which individual units of
-source code, sets of one or more MCU program modules together with associated
-control data, usage procedures, and operating procedures, are tested to
-determine whether they are fit for use. Unit testing finds problems early
-in the development cycle.
+## Target Hardware
+* **MCU:** ESP32-C3 SuperMini
+* **Sensor:** ADXL345 (I2C)
+* **Pin Configuration:** SDA = GPIO 7, SCL = GPIO 8
 
-More information about PlatformIO Unit Testing:
-- https://docs.platformio.org/en/latest/advanced/unit-testing/index.html
+---
+
+## 1. Hardware I2C Scanner
+**Filename:** `i2c_scanner.cpp`
+
+### Description
+A low-level utility designed to verify the physical integrity of the I2C bus and identifying connected peripherals. It is configured specifically for the non-standard pinout of the ESP32-C3 SuperMini.
+
+### Key Configuration
+* **Bus Speed:** 10 kHz (Conservative speed to rule out signal impedance issues).
+* **Timeout:** High tolerance for unstable connections.
+
+### Usage
+Upload this script if the main firmware reports "Sensor Not Found".
+* **Expected Output (Success):**
+  ```text
+  I2C device found at address 0x53  !
+  ```
+* **Output (Failure):**
+  ```text
+  No I2C devices found
+  ```
+  
